# RP2040-Matter-embassy

./: .gitignore  CLAUDE.md  Cargo.toml  GEMINI.md  README.md  build.rs  matter.uf2  output.uf2
.cargo/: config.toml
.claude/commands/: add-cluster.md  build.md  check-deps.md  flash.md  setup.md
src/: main.rs
