[package]
name = "matter"
version = "0.1.0"
edition = "2024"

[target.thumbv6m-none-eabi]
runner = "elf2uf2-rs -d"

[build]
target = "thumbv6m-none-eabi"

[env]
DEFMT_LOG = "info"

[dependencies]
embassy-executor = { version = "0.5.0", features = ["arch-cortex-m", "executor-thread", "defmt", "integrated-timers"] }
embassy-time = { version = "0.3.0", features = ["defmt", "defmt-timestamp-uptime"] }
embassy-rp = { version = "0.1.0", features = ["defmt", "unstable-pac", "time-driver", "critical-section-impl"] }
embassy-net = { version = "0.4.0", features = ["defmt", "tcp", "udp", "dhcpv4", "medium-ethernet", "igmp"] }

# Pico W Wi-Fi
cyw43 = { version = "0.1.0", features = ["defmt", "firmware-logs"] }
cyw43-pio = { version = "0.1.0", features = ["defmt", "overclock"] }

# Matter Stack & Allocator
rs-matter = { version = "0.1.0-alpha", default-features = false, features = ["embassy-net", "crypto-mbedtls"] }
embedded-alloc = "0.5.1"

# Standard Embedded Boilerplate
defmt = "0.3"
defmt-rtt = "0.4"
panic-probe = { version = "0.3", features = ["print-defmt"] }
cortex-m = "0.7"
cortex-m-rt = "0.7"